# gstpeaq

./: .gitignore  CMakeLists.txt  bootstrap.cmake  build.sh  conanfile.txt  get-deps.sh  peaq.sh
src/: fbearmodel.h
